Fixes the overflow that triggers horizontal scroll bar for responsiveness

--- a/src/app/quote-form/quote-form.component.css
+++ b/src/app/quote-form/quote-form.component.css
@@ -8,3 +8,12 @@
     border-color: whitesmoke;
     color: white;
 }
+
+.form-group {
+    margin-left: 25%;
+    align-content: center;
+}
+
+.container-fluid {
+    overflow: hidden;
+}
